--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="preload" as="image" href="images/tryagain.png">
   <link rel="preload" as="image" href="images/youwin.png">
   <link rel="preload" as="image" href="images/lose1.gif">
-  <link rel="preload" as="image" href="images/lose2.gig">
+  <link rel="preload" as="image" href="images/lose2.gif">
   
   <style>
     /* Vos styles existants restent inchangés */
@@ -667,7 +667,6 @@ transform: translateY(-220px) scale(0.95);
     });
     
     // Données du quiz
-    const quizData = [
 const quizData = [
   {
     "question": "Comment un ERP doit-il être desservi?",
