--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ const quizData = [
   ]
 },
 {
-  "questions": [
+  "question": [
     {
       "question": "Quelle est la largeur minimale sous obstacle pour une voie engins?",
       "options": [
@@ -858,7 +858,7 @@ const quizData = [
       ]
     },
     {
-      "questions": [
+      "question": [
         {
           "question": "Dans quel cas une voie échelle est-elle obligatoire?",
           "options": [
