--- a/index.html
+++ b/index.html
@@ -648,6 +648,8 @@ transform: translateY(-220px) scale(0.95);
   <button class="index-option" data-url="https://remi-mason.github.io/quiz-2-3/">3</button>
   <br>
   <button class="index-option" data-url="https://remi-mason.github.io/quiz-2-4/" style="margin-top:20px;">4</button>
+	  <button class="index-option" data-url="https://remi-mason.github.io/quiz-2-5/" style="margin-top:20px;">5</button>
+	 <button class="index-option" data-url="https://remi-mason.github.io/quiz-2-6/" style="margin-top:20px;">6</button>
   <br>
   <button id="close-index-modal">Fermer</button>
 </div>
